:recycle: Refactor solving protocols
PaintbrushSolver is now a generic protocol that defines what it
means to be a general solver. The current machine learning
implementation is a protocol that conforms to the solver, thus
allowing the solving system to be modular and suitable for the
Liskov substitution principle.

Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Shounin/Assets/Localizations/Localizable.strings
+++ b/Shounin/Assets/Localizations/Localizable.strings
@@ -38,5 +38,5 @@
 
 // MARK: - Errors
 "PaintbrushSolverError.noPathGenerated" = "No path could be generated.";
-"PaintbrushSolverError.imageCaptureFailure" = "Failed to capture image from the canvas.";
+"PaintbrushSolverError.inputCaptureFailure" = "Failed to capture input from the canvas.";
 "PaintbrushSolverError.predictionFailure" = "An error occurred during prediction.";
