:memo: Update Chapter Three texts
Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Shounin/Story Source/ch03.md
+++ b/Shounin/Story Source/ch03.md
@@ -93,10 +93,20 @@ Chelsea: “Nope, made it myself. Katy gave me the visuals, and I just did the r
 Sam watches as I sit down on the blanket.
 
 Sam: “Oh my God, I have to take a picture of this…”  
-Chelsea: “Oh, okay! You want me to pose or anything?”  
-Sam: “Nah, you’re in a perfect spot for this.”
+Sam: “Just a second while I pul  out my phone…” 
 
-Sam pulls out their phone, lines up the shot, and takes a picture.
+Sam pulls out their phone to take a picture, but I don’t know if I feel comfortable with keeping the stub intact…
+
+Chelsea: “Wait, there’s something I wanna fix first.”
+
+I use my toes to push the zipper across the stub and let my paws come out of the cocoon. Quickly, I repose myself so than Sam can take their photo.
+
+Chelsea: “Okay, I’m good!”  
+Sam: “… how come you wanted to do that?”  
+Chelsea: “Ehh, long story…”  
+Sam: “Alright.”
+
+Sam smirks, lines up the shot, and takes the photo.
 
 Sam: “That’s awesome. Now I get the whole hammer thing.”  
 Chelsea: “Really?”  
